correct constants project name

--- a/CleanArchitectureTemplate.Infrastructure/CleanArchitectureTemplate.Infrastructure.csproj
+++ b/CleanArchitectureTemplate.Infrastructure/CleanArchitectureTemplate.Infrastructure.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="7.1.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.3.0" />
@@ -36,7 +38,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\CleanArchitectureTemplate.Application\CleanArchitectureTemplate.Application.csproj" />
-    <ProjectReference Include="..\CleanArchitectureTemplate.Constans\CleanArchitectureTemplate.Constans.csproj" />
+    <ProjectReference Include="..\CleanArchitectureTemplate.Constants\CleanArchitectureTemplate.Constants.csproj" />
     <ProjectReference Include="..\CleanArchitectureTemplate.Domain\CleanArchitectureTemplate.Domain.csproj" />
     <ProjectReference Include="..\CleanArchitectureTemplate.Resources\CleanArchitectureTemplate.Resources.csproj" />
   </ItemGroup>
